# privchat-iced

./: .gitignore  Cargo.toml  README.md  build.rs  package.sh
assets/: icon.icns
config/: dubai.toml  live.toml  loan.toml  local.toml  prod.toml
docs/: CONTRACT_TEST_PLAN_V0_3.md  PRIVCHAT_DESKTOP_MODULE_SKELETON_SPEC.md  PRIVCHAT_DESKTOP_V0_3_FROZEN_UI_CONTRACT.md
src/: audio.rs  config.rs  main.rs
src/app/: auth_prefs.rs  message.rs  mod.rs  paths.rs  reporting.rs  route.rs  single_instance.rs  state.rs  subscription.rs  update.rs
src/presentation/: adapter.rs  mod.rs  vm.rs
src/sdk/: bridge.rs  events.rs
src/ui/: icons.rs  mod.rs
src/ui/screens/: add_friend.rs  chat.rs  image_viewer.rs  login.rs  logs.rs  mod.rs  session_list.rs  settings.rs  splash.rs  switch_account.rs  workspace.rs
src/ui/widgets/: composer.rs  forward_picker.rs  friend_settings.rs  group_settings.rs  message_bubble.rs  mod.rs  timeline_list.rs  unread_banner.rs
src/ui/widgets/bubbles/: file.rs  image.rs  mod.rs  text.rs  unknown.rs  video.rs  voice.rs
wix/: main.wxs
