[package]
name = "privchat-iced"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["zoujiaqing <zoujiaqing@gmail.com>"]

[dependencies]
iced = { version = "0.14", features = ["tokio", "svg", "image"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
privchat-sdk = { path = "../privchat-sdk/crates/privchat-sdk" }
