[package]
name = "privchat-iced"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["zoujiaqing <zoujiaqing@gmail.com>"]

[dependencies]
iced = { version = "0.14", features = ["tokio", "svg", "image"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
anyhow = "1"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
rodio = { version = "0.22", default-features = false, features = ["playback", "wav", "symphonia-aac", "symphonia-isomp4"] }
privchat-sdk = { path = "../privchat-sdk/crates/privchat-sdk" }
privchat-protocol = { path = "../privchat-protocol" }
fs2 = "0.4"

[package.metadata.bundle]
name = "PrivChat"
identifier = "com.netonstream.privchat-desktop"
